# hello_symengine

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists_backup.txt  README.md  run_build.cmd  run_cmake_generate.cmd  run_vspkg_install.cmd  vcpkg.json
